specs/018-class-inheritance-members/examples/invalid/protected-access.ts
class Shape {
  protected sides: int;
  constructor(sides: int) {
    this.sides = sides;
  }
}

let s = new Shape(3);
console.log(s.sides);
